# redts

./: .dockerignore  .gitignore  Dockerfile  README.md  package.json
.github/workflows/: cli.yml  docker.yml  server.yml
cli/: Cargo.toml  go.mod  go.sum
cli-legacy/src/: main.go
cli-legacy/src/cmd/: close_to.go  config.go  config_get.go  edts.go  find.go  root.go  version.go
cli-legacy/src/pkg/config/: access.go  ensure.go  io.go  load.go
cli-legacy/src/pkg/edts/: api.go  client.go  command.go
cli/src/: api.rs  config.rs  http.rs  main.rs
cli/src/cmd/: config_get.go  config_get.rs  config_set.go  config_set.rs  coords.go  distance.go  edts.go  fuel_usage.go  galmath.go  mod.rs  root.go  version.go
cli/src/pkg/config/: access.go  io.go  struct.go
cli/src/pkg/edts/: api.go  command.go
server/: .env.example  .gitignore  Dockerfile  package.json
server/src/: auth.ts  edts.ts  execa.ts  index.ts  logger.ts  server.ts  update.ts
server/src/env/: register.ts
src/: auth.ts  edts.ts  index.ts  logger.ts  server.ts  update.ts
src/env/: index.ts
