[package]
name = "redts_cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
clap = { version = "3.1.16", features = ["derive"] }
color-eyre = "0.6.1"
once_cell = "1.10.0"
reqwest = { version = "0.11.10", features = ["blocking"] }
serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5.9"
