[package]
name = "redts_cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
clap = { version = "3.1.16", features = ["derive"] }
color-eyre = "0.6.1"
dirs = "4.0.0"
once_cell = "1.10.0"
reqwest = { version = "0.11.10", features = ["blocking"] }
serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5.9"
tracing = "0.1.34"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
